# pyfmu_csv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: build-container.yml
docs/: architecture.md  build-from-source.md  limitations.md  localization.md  overview.md  testing.md  usage.md
python/pyfmu_csv/: __init__.py  cli.py  csv_model.py  model.py  model_description.py  packaging.py  scaffold.py
runtime/: CMakeLists.txt
runtime/include/pyfmu_csv/runtime/: fmu_runtime.hpp
runtime/src/: fmi2_cs_api.cpp  fmu_runtime.cpp  fmu_runtime_core.cpp  fmu_runtime_csv.cpp  fmu_runtime_values.cpp
runtime/tests/: test_fmi2_api_smoke.cpp  test_runtime_smoke.cpp
samples/: signals.csv
scripts/: build_container.sh  container_build.sh  container_common.sh  container_shell.sh
templates/fmi2/: README.md
tests/: conftest.py  test_cli.py  test_scaffold.py
tests/e2e/: test_fmpy_validation.py
tests/integration/: test_cli.py  test_packaging.py
tests/unit/: test_csv_model.py  test_model_description.py  test_packaging_platform.py  test_runtime_resolution.py
