[build-system]
requires = ["setuptools>=66", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfmu-csv"
version = "0.1.0"
description = "Tooling for packaging CSV-driven FMI 2.0 Co-Simulation FMUs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "pyfmu_csv contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "fmpy>=0.3.29"]

[project.scripts]
pyfmu-csv = "pyfmu_csv.cli:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.package-data]
pyfmu_csv = ["_runtime/*"]

[tool.setuptools.packages.find]
where = ["python"]
